--- a/styles.css
+++ b/styles.css
@@ -96,7 +96,10 @@ body {
   text-align: center;
   margin: 10px;
 }
-
+.calendar-section button{
+  border: none  ;
+  background-color: #63bcd7;
+}
 #calendar-nav button {
   padding: 5px 10px;
   margin: 5px;
@@ -236,3 +239,4 @@ body {
     width: 90%;
   }
 }
+
