--- a/stylee.css
+++ b/stylee.css
@@ -52,6 +52,7 @@ header img {
 }
 
 .icons-section {
+    margin-top: 10%;
     display: flex;
     justify-content: space-around;
     padding: 20px;
@@ -112,3 +113,21 @@ header img {
         border-top: none;
     }
 }
+footer {
+    margin-top: 100px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    background: linear-gradient(to right, rgba(255, 255, 255, 0.4), rgba(2, 174, 193, 0.825));
+    padding: 10px;
+    border-bottom: 1px solid #ddd;
+  }
+  
+  footer nav {
+    display: flex;
+    align-items: center;
+  }
+  footer h3 {
+    color: #333;
+    margin-left: 80%;
+  }
